# research-assistant-a2a-sdk

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start_agents.sh  streamlit_app.py
apps/: schema.py  ui_helpers.py
apps/researcher/: main.py
apps/writer/: main.py
searxng/config/: limiter.toml  settings.yml
tests/: test_researcher_search.py  test_ui_helpers.py  test_writer.py
